part1/antlr/CoolParser.py
# Generated from antlr/Cool.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CoolParser ( Parser ):

    grammarFileName = "Cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'<-'", "'@'", "'.'", "'=>'", "'+'", "'-'", 
                     "'*'", "'/'", "'~'", "'<'", "'<='", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KLASS", "ELSE", "FI", "IF", "IN", "INHERITS", "ISVOID", 
                      "LET", "LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", 
                      "NEW", "OF", "NOT", "TRUE", "FALSE", "TYPE", "ID", 
                      "INTEGER", "STRING", "WHITESPACE", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "klass", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    KLASS=20
    ELSE=21
    FI=22
    IF=23
    IN=24
    INHERITS=25
    ISVOID=26
    LET=27
    LOOP=28
    POOL=29
    THEN=30
    WHILE=31
    CASE=32
    ESAC=33
    NEW=34
    OF=35
    NOT=36
    TRUE=37
    FALSE=38
    TYPE=39
    ID=40
    INTEGER=41
    STRING=42
    WHITESPACE=43
    COMMENT=44
    LINE_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.KlassContext)
            else:
                return self.getTypedRuleContext(CoolParser.KlassContext,i)


        def getRuleIndex(self):
            return CoolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CoolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.klass()
                self.state = 11
                self.match(CoolParser.T__0)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CoolParser.KLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(CoolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)

        def INHERITS(self):
            return self.getToken(CoolParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(CoolParser.FeatureContext,i)


        def getRuleIndex(self):
            return CoolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)




    def klass(self):

        localctx = CoolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(CoolParser.KLASS)
            self.state = 18
            self.match(CoolParser.TYPE)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CoolParser.INHERITS:
                self.state = 19
                self.match(CoolParser.INHERITS)
                self.state = 20
                self.match(CoolParser.TYPE)


            self.state = 23
            self.match(CoolParser.T__1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoolParser.ID:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(CoolParser.T__0)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(CoolParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CoolParser.ID, 0)

        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FormalContext)
            else:
                return self.getTypedRuleContext(CoolParser.FormalContext,i)


        def getRuleIndex(self):
            return CoolParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = CoolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(CoolParser.ID)
                self.state = 35
                self.match(CoolParser.T__3)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.ID:
                    self.state = 36
                    self.formal()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CoolParser.T__4:
                        self.state = 37
                        self.match(CoolParser.T__4)
                        self.state = 38
                        self.formal()
                        self.state = 43
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 46
                self.match(CoolParser.T__5)
                self.state = 47
                self.match(CoolParser.T__6)
                self.state = 48
                self.match(CoolParser.TYPE)
                self.state = 49
                self.match(CoolParser.T__1)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(CoolParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(CoolParser.ID)
                self.state = 54
                self.match(CoolParser.T__6)
                self.state = 55
                self.match(CoolParser.TYPE)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.T__7:
                    self.state = 56
                    self.match(CoolParser.T__7)
                    self.state = 57
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CoolParser.ID, 0)

        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def getRuleIndex(self):
            return CoolParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = CoolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(CoolParser.ID)
            self.state = 63
            self.match(CoolParser.T__6)
            self.state = 64
            self.match(CoolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ID)
            else:
                return self.getToken(CoolParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def IF(self):
            return self.getToken(CoolParser.IF, 0)

        def THEN(self):
            return self.getToken(CoolParser.THEN, 0)

        def ELSE(self):
            return self.getToken(CoolParser.ELSE, 0)

        def FI(self):
            return self.getToken(CoolParser.FI, 0)

        def WHILE(self):
            return self.getToken(CoolParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(CoolParser.LOOP, 0)

        def POOL(self):
            return self.getToken(CoolParser.POOL, 0)

        def LET(self):
            return self.getToken(CoolParser.LET, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)

        def IN(self):
            return self.getToken(CoolParser.IN, 0)

        def CASE(self):
            return self.getToken(CoolParser.CASE, 0)

        def OF(self):
            return self.getToken(CoolParser.OF, 0)

        def ESAC(self):
            return self.getToken(CoolParser.ESAC, 0)

        def NEW(self):
            return self.getToken(CoolParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(CoolParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(CoolParser.NOT, 0)

        def INTEGER(self):
            return self.getToken(CoolParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(CoolParser.STRING, 0)

        def TRUE(self):
            return self.getToken(CoolParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(CoolParser.FALSE, 0)

        def getRuleIndex(self):
            return CoolParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CoolParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 67
                self.match(CoolParser.ID)
                self.state = 68
                self.match(CoolParser.T__7)
                self.state = 69
                self.expr(25)
                pass

            elif la_ == 2:
                self.state = 70
                self.match(CoolParser.ID)
                self.state = 71
                self.match(CoolParser.T__3)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoolParser.T__1) | (1 << CoolParser.T__3) | (1 << CoolParser.T__15) | (1 << CoolParser.IF) | (1 << CoolParser.ISVOID) | (1 << CoolParser.LET) | (1 << CoolParser.WHILE) | (1 << CoolParser.CASE) | (1 << CoolParser.NEW) | (1 << CoolParser.NOT) | (1 << CoolParser.TRUE) | (1 << CoolParser.FALSE) | (1 << CoolParser.ID) | (1 << CoolParser.INTEGER) | (1 << CoolParser.STRING))) != 0):
                    self.state = 72
                    self.expr(0)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CoolParser.T__4:
                        self.state = 73
                        self.match(CoolParser.T__4)
                        self.state = 74
                        self.expr(0)
                        self.state = 79
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 82
                self.match(CoolParser.T__5)
                pass

            elif la_ == 3:
                self.state = 83
                self.match(CoolParser.IF)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(CoolParser.THEN)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(CoolParser.ELSE)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(CoolParser.FI)
                pass

            elif la_ == 4:
                self.state = 91
                self.match(CoolParser.WHILE)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(CoolParser.LOOP)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(CoolParser.POOL)
                pass

            elif la_ == 5:
                self.state = 97
                self.match(CoolParser.T__1)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.expr(0)
                    self.state = 99
                    self.match(CoolParser.T__0)
                    self.state = 103 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoolParser.T__1) | (1 << CoolParser.T__3) | (1 << CoolParser.T__15) | (1 << CoolParser.IF) | (1 << CoolParser.ISVOID) | (1 << CoolParser.LET) | (1 << CoolParser.WHILE) | (1 << CoolParser.CASE) | (1 << CoolParser.NEW) | (1 << CoolParser.NOT) | (1 << CoolParser.TRUE) | (1 << CoolParser.FALSE) | (1 << CoolParser.ID) | (1 << CoolParser.INTEGER) | (1 << CoolParser.STRING))) != 0)):
                        break

                self.state = 105
                self.match(CoolParser.T__2)
                pass

            elif la_ == 6:
                self.state = 107
                self.match(CoolParser.LET)
                self.state = 108
                self.match(CoolParser.ID)
                self.state = 109
                self.match(CoolParser.T__6)
                self.state = 110
                self.match(CoolParser.TYPE)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.T__7:
                    self.state = 111
                    self.match(CoolParser.T__7)
                    self.state = 112
                    self.expr(0)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CoolParser.T__4:
                    self.state = 115
                    self.match(CoolParser.T__4)
                    self.state = 116
                    self.match(CoolParser.ID)
                    self.state = 117
                    self.match(CoolParser.T__6)
                    self.state = 118
                    self.match(CoolParser.TYPE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CoolParser.T__7:
                        self.state = 119
                        self.match(CoolParser.T__7)
                        self.state = 120
                        self.expr(0)


                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(CoolParser.IN)
                self.state = 129
                self.expr(19)
                pass

            elif la_ == 7:
                self.state = 130
                self.match(CoolParser.CASE)
                self.state = 131
                self.expr(0)
                self.state = 132
                self.match(CoolParser.OF)
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 133
                    self.match(CoolParser.ID)
                    self.state = 134
                    self.match(CoolParser.T__6)
                    self.state = 135
                    self.match(CoolParser.TYPE)
                    self.state = 136
                    self.match(CoolParser.T__10)
                    self.state = 137
                    self.expr(0)
                    self.state = 138
                    self.match(CoolParser.T__0)
                    self.state = 142 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CoolParser.ID):
                        break

                self.state = 144
                self.match(CoolParser.ESAC)
                pass

            elif la_ == 8:
                self.state = 146
                self.match(CoolParser.NEW)
                self.state = 147
                self.match(CoolParser.TYPE)
                pass

            elif la_ == 9:
                self.state = 148
                self.match(CoolParser.ISVOID)
                self.state = 149
                self.expr(16)
                pass

            elif la_ == 10:
                self.state = 150
                self.match(CoolParser.T__15)
                self.state = 151
                self.expr(11)
                pass

            elif la_ == 11:
                self.state = 152
                self.match(CoolParser.NOT)
                self.state = 153
                self.expr(7)
                pass

            elif la_ == 12:
                self.state = 154
                self.match(CoolParser.T__3)
                self.state = 155
                self.expr(0)
                self.state = 156
                self.match(CoolParser.T__5)
                pass

            elif la_ == 13:
                self.state = 158
                self.match(CoolParser.ID)
                pass

            elif la_ == 14:
                self.state = 159
                self.match(CoolParser.INTEGER)
                pass

            elif la_ == 15:
                self.state = 160
                self.match(CoolParser.STRING)
                pass

            elif la_ == 16:
                self.state = 161
                self.match(CoolParser.TRUE)
                pass

            elif la_ == 17:
                self.state = 162
                self.match(CoolParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 207
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 205
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 165
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 166
                        self.match(CoolParser.T__11)
                        self.state = 167
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 168
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 169
                        self.match(CoolParser.T__12)
                        self.state = 170
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 171
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 172
                        self.match(CoolParser.T__13)
                        self.state = 173
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 174
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 175
                        self.match(CoolParser.T__14)
                        self.state = 176
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 177
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 178
                        self.match(CoolParser.T__16)
                        self.state = 179
                        self.expr(11)
                        pass

                    elif la_ == 6:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 180
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 181
                        self.match(CoolParser.T__17)
                        self.state = 182
                        self.expr(10)
                        pass

                    elif la_ == 7:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 183
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 184
                        self.match(CoolParser.T__18)
                        self.state = 185
                        self.expr(9)
                        pass

                    elif la_ == 8:
                        localctx = CoolParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 186
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 189
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==CoolParser.T__8:
                            self.state = 187
                            self.match(CoolParser.T__8)
                            self.state = 188
                            self.match(CoolParser.TYPE)


                        self.state = 191
                        self.match(CoolParser.T__9)
                        self.state = 192
                        self.match(CoolParser.ID)
                        self.state = 193
                        self.match(CoolParser.T__3)
                        self.state = 202
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoolParser.T__1) | (1 << CoolParser.T__3) | (1 << CoolParser.T__15) | (1 << CoolParser.IF) | (1 << CoolParser.ISVOID) | (1 << CoolParser.LET) | (1 << CoolParser.WHILE) | (1 << CoolParser.CASE) | (1 << CoolParser.NEW) | (1 << CoolParser.NOT) | (1 << CoolParser.TRUE) | (1 << CoolParser.FALSE) | (1 << CoolParser.ID) | (1 << CoolParser.INTEGER) | (1 << CoolParser.STRING))) != 0):
                            self.state = 194
                            self.expr(0)
                            self.state = 199
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==CoolParser.T__4:
                                self.state = 195
                                self.match(CoolParser.T__4)
                                self.state = 196
                                self.expr(0)
                                self.state = 201
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 204
                        self.match(CoolParser.T__5)
                        pass

             
                self.state = 209
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 24)
         




